@@ -1,3 +1,9 @@
+Fri Mar  4 16:00:26 UTC 2011  Olli Savia  <ops@iki.fi>
+
+        * ace/config-freebsd.h:
+        * include/makeinclude/platform_freebsd.GNU:
+          Threads related cleanup.
+
 Fri Mar  4 14:54:49 UTC 2011  Olli Savia  <ops@iki.fi>
 
         * ace/OS_NS_signal.h:
@@ -5,7 +11,7 @@ Fri Mar  4 14:54:49 UTC 2011  Olli Savia  <ops@iki.fi>
 
         * ace/config-openbsd.h:
         * include/makeinclude/platform_openbsd.GNU:
-          Cleanup.
+          Threads related cleanup.
 
 Fri Mar  4 12:39:39 UTC 2011  Olli Savia  <ops@iki.fi>
 
